fix big with chart not fitting container on load

--- a/src/styles/Chart.scss
+++ b/src/styles/Chart.scss
@@ -5,5 +5,8 @@
   display: flex;
   justify-content: center;
   padding: .75rem;
-  height: 300px;
+  @include responsive($mobileM) {
+    height: 300px;
+  }
 }
+
